<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:background="@color/greentop"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="9dp"
        android:paddingTop="8dp">

        <cn.join.android.ui.widget.CircleImageView
            android:id="@+id/top_left_imgview"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:clickable="true"
            android:src="@drawable/userpic" />

        <RadioGroup
            android:id="@+id/query_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="@color/transparent"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/query_home_type_singer"
                style="@style/navigation_bottom_radio"
                android:background="@drawable/header_tab_left_bg"
                android:text="@string/main_tab_left" />

            <RadioButton
                android:id="@+id/query_home_type_radio"
                style="@style/navigation_bottom_radio"
                android:background="@drawable/header_tab_center_bg"
                android:checked="true"
                android:text="@string/main_tab_play" />

            <RadioButton
                android:id="@+id/query_home_type_album"
                style="@style/navigation_bottom_radio"
                android:background="@drawable/header_tab_right_bg"
                android:text="@string/main_tab_right" />
        </RadioGroup>

        <ImageView
            android:id="@+id/home_top_sx_imgview"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/home_top_share_imgview"
            android:background="@drawable/ic_shuaxin" />

        <ImageView
            android:id="@+id/home_top_share_imgview"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:background="@drawable/iconfont_share" />
    </RelativeLayout>
</LinearLayout>
