<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    <include 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        layout="@layout/home_pager"
        android:layout_marginTop="@dimen/edge_padding_size_m"
        android:layout_marginLeft="@dimen/edge_padding_size_m"
        android:layout_marginRight="@dimen/edge_padding_size_m"
        />

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:paddingTop="@dimen/edge_padding_size_s"
        android:paddingBottom="@dimen/edge_padding_size_m"
        android:paddingLeft="@dimen/edge_padding_size_m"
        android:paddingRight="@dimen/edge_padding_size_m"
        >
        <!-- 左边 -->
        <LinearLayout 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:orientation="vertical"
	        >
	        <RelativeLayout 
	            android:id="@+id/see_part1_view"
	            android:layout_width="match_parent"
	            android:layout_height="0dp"
	            android:layout_weight="3"
	            android:background="@drawable/mv_bg"
	            >
	            <LinearLayout android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:background="@color/blue4"
	                android:alpha="0.92"
	                android:gravity="center"
	                android:orientation="vertical"
	                >
	                <ImageView 
	                    android:layout_width="@dimen/see_icon_size_big"
	                    android:layout_height="@dimen/see_icon_size_big"
	                    android:background="@drawable/icon_mv"
	                    />
	                <TextView 
	                    android:id="@+id/see_part1_name_tv"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:textSize="@dimen/title_textsize"
	                    android:layout_marginTop="10dp"
	                    android:textColor="@color/white"
	                    android:text="@string/mv"
	                    />
	            </LinearLayout>
	        </RelativeLayout>
        	<RelativeLayout 
        	    android:id="@+id/see_part2_view"
        	    android:layout_width="match_parent"
	            android:layout_height="0dp"
	            android:layout_weight="2"
	            android:layout_marginTop="@dimen/edge_padding_size_s"
	            android:background="@drawable/movie_bg"
	            >
        	    <LinearLayout android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:background="@color/palevioletred"
	                android:alpha="0.92"
	                android:gravity="center"
	                android:orientation="vertical"
	                >
	                <ImageView 
	                    android:layout_width="@dimen/see_icon_size"
	                    android:layout_height="@dimen/see_icon_size"
	                    android:background="@drawable/icon_movie"
	                    />
	                <TextView 
	                    android:id="@+id/see_part2_name_tv"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:textSize="@dimen/content_textsize_m"
	                    android:layout_marginTop="10dp"
	                    android:textColor="@color/white"
	                    android:text="@string/movie"
	                    />
        	    </LinearLayout>
        	</RelativeLayout>
    	</LinearLayout>
    	<!-- 右边 -->
    	 <LinearLayout 
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="1"
	        android:orientation="vertical"
	        android:layout_marginLeft="@dimen/edge_padding_size_s"
	        >
        	<RelativeLayout 
        	    android:id="@+id/see_part3_view"
        	    android:layout_width="match_parent"
	            android:layout_height="0dp"
	            android:layout_weight="1"
	            android:background="@drawable/ych_bg"
	            >
	            <LinearLayout android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:background="@color/orange"
	                android:alpha="0.92"
	                android:orientation="vertical"
	                android:gravity="center"
	                >
	                <ImageView 
	                    android:layout_width="@dimen/see_icon_size"
	                    android:layout_height="@dimen/see_icon_size"
	                    android:background="@drawable/icon_concert"
	                    />
	                <TextView 
	                    android:id="@+id/see_part3_name_tv"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:textSize="@dimen/content_textsize_m"
	                    android:layout_marginTop="10dp"
	                    android:textColor="@color/white"
	                    android:text="@string/Concert"
	                    />
	            </LinearLayout>
	        </RelativeLayout>
        	<RelativeLayout 
        	    android:id="@+id/see_part4_view"
        	    android:layout_width="match_parent"
	            android:layout_height="0dp"
	            android:layout_weight="1"
	            android:layout_marginTop="@dimen/edge_padding_size_s"
	            android:background="@drawable/zongyi_bg"
	            >
        	    <LinearLayout android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:background="@color/green"
	                android:alpha="0.92"
	                android:orientation="vertical"
	                android:gravity="center"
	                >
	                <ImageView 
	                    android:layout_width="@dimen/see_icon_size"
	                    android:layout_height="@dimen/see_icon_size"
	                    android:background="@drawable/icon_variety"
	                    />
	                <TextView 
	                    android:id="@+id/see_part4_name_tv"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:textSize="@dimen/content_textsize_m"
	                    android:layout_marginTop="10dp"
	                    android:textColor="@color/white"
	                    android:text="@string/Variety"
	                    />
        	    </LinearLayout>
        	</RelativeLayout>
        	<RelativeLayout 
        	    android:id="@+id/see_part5_view"
        	    android:layout_width="match_parent"
	            android:layout_height="0dp"
	            android:layout_weight="1"
	            android:layout_marginTop="@dimen/edge_padding_size_s"
	            android:background="@drawable/ad_bg"
	            >
        	    <LinearLayout android:layout_width="match_parent"
	                android:layout_height="match_parent"
	                android:background="@color/bluetop"
	                android:alpha="0.92"
	                android:orientation="vertical"
	                android:gravity="center"
	                >
	                <ImageView 
	                    android:layout_width="@dimen/see_icon_size"
	                    android:layout_height="@dimen/see_icon_size"
	                    android:background="@drawable/icon_ad"
	                    />
	                <TextView 
	                    android:id="@+id/see_part5_name_tv"
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:textSize="@dimen/content_textsize_m"
	                    android:layout_marginTop="10dp"
	                    android:textColor="@color/white"
	                    android:text="@string/news"
	                    />
        	    </LinearLayout>
        	</RelativeLayout>
    	</LinearLayout>
    </LinearLayout>
</LinearLayout>
