<RelativeLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/root1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
	<include layout="@layout/title" android:id="@+id/title"/>
    <ScrollView 
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"  
	    android:scrollbars="none" 
	    android:layout_below="@+id/title"
	    android:background="@color/default_gray"
	    >
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="vertical"
	    >
	<RelativeLayout 
	    android:id="@+id/video_info_layout"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingTop="15dp"
	    android:paddingBottom="15dp"
	    android:paddingLeft="10dp"
	    android:paddingRight="10dp"	    
	    android:background="#292F46"
	    >
	    <ImageView 
	        android:id="@+id/video_info_image"
	        android:layout_width="120dp"
	        android:layout_height="150dp"
	        android:scaleType="centerCrop"
	        />
	    <TextView 
	        android:id="@+id/video_info_name"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/title_textsize"
	        android:textColor="@color/white"
	        android:layout_marginTop="2dp"
	        android:layout_toRightOf="@+id/video_info_image"
	        android:layout_marginLeft="15dp"
	        />
	    <TextView 
	        android:id="@+id/video_info_lead"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/white"
	        android:textSize="@dimen/content_textsize_m"
	        android:layout_below="@+id/video_info_name"
	        android:singleLine="true"
	        android:layout_marginTop="5dp"
	        android:layout_alignLeft="@+id/video_info_name"
	        />
	     <TextView 
	        android:id="@+id/video_info_time"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/white"
	        android:textSize="@dimen/content_textsize_m"
	        android:layout_below="@+id/video_info_lead"
	        android:layout_marginTop="5dp"
	        android:layout_alignLeft="@+id/video_info_name"
	        />
	     <TextView 
	        android:id="@+id/video_info_from"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/white"
	        android:textSize="@dimen/content_textsize_m"
	        android:text="@string/video_from"
	        android:layout_below="@+id/video_info_time"
	        android:layout_marginTop="5dp"
	        android:layout_alignLeft="@+id/video_info_name"
	        />
	     <TextView 
	        android:id="@+id/video_info_start"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="@color/white"
	        android:textSize="@dimen/content_textsize_m"
	        android:text="@string/video_start_play"
	        android:layout_below="@+id/video_info_from"
	        android:layout_marginTop="10dp"
	        android:layout_alignLeft="@+id/video_info_name"
	        android:background="@drawable/common_btn_bg"
	        android:paddingLeft="5dp"
	        android:paddingRight="5dp"
	        />
	     </RelativeLayout>
	     <RelativeLayout android:layout_width="match_parent"
	         android:layout_height="wrap_content"
	    	 android:padding="10dp"
	         >
	     <TextView 
	        android:id="@+id/video_info_jianjie"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textSize="@dimen/content_textsize_ml"
	        android:layout_marginTop="10dp"
	        android:layout_marginBottom="10dp"
	        android:text="@string/jianjie"
	        android:textColor="@color/blue"
	        />
	     <View 
	         android:id="@+id/video_info_jianjie_line"
	         android:layout_width="match_parent"
	         android:layout_height="1dp"
	         android:background="@color/lightgray"
	         android:layout_below="@+id/video_info_jianjie"
	         />
	     <TextView 
	        android:id="@+id/video_info_director"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textColor="@color/text_bg"
	        android:textSize="@dimen/content_textsize_ml"
	        android:layout_below="@+id/video_info_jianjie_line"
	        android:layout_marginTop="10dp"
	        android:layout_alignLeft="@+id/video_info_jianjie"
	        />
	     <TextView 
	        android:id="@+id/video_info_lead2"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textColor="@color/text_bg"
	        android:textSize="@dimen/content_textsize_ml"
	        android:layout_below="@+id/video_info_director"
	        android:layout_marginTop="10dp"
	        android:layout_alignLeft="@+id/video_info_jianjie"
	        />
	     <TextView 
	        android:id="@+id/video_info_style"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textColor="@color/text_bg"
	        android:textSize="@dimen/content_textsize_ml"
	        android:layout_below="@+id/video_info_lead2"
	        android:layout_marginTop="10dp"
	        android:layout_alignLeft="@+id/video_info_jianjie"
	        />
	     <TextView 
	        android:id="@+id/video_info_desc"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:textColor="@color/text_bg"
	        android:textSize="@dimen/content_textsize_ml"
	        android:layout_below="@+id/video_info_style"
	        android:layout_marginTop="10dp"
	        android:layout_alignLeft="@+id/video_info_jianjie"
	        />
	     <LinearLayout
		    android:id="@+id/adLayout"
		    android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:gravity="center_horizontal"
		    android:orientation="vertical"
		    android:layout_below="@+id/video_info_desc"
		    android:layout_marginTop="10dp"
		    android:layout_marginBottom="15dp"
		    >
		</LinearLayout>
	</RelativeLayout>
	</LinearLayout>
	</ScrollView>
</RelativeLayout>
